Deployed  with MkDocs version: 1.6.1

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -1159,10 +1159,10 @@
 <h2 id="assignment-structure">Assignment Structure</h2>
 <p>Each week features different types of learning activities:</p>
 <ul>
-<li><strong>🔬 Lab Exercises</strong>: Hands-on coding and implementation</li>
-<li><strong>📊 Case Studies</strong>: Analysis of real-world LLM applications  </li>
-<li><strong>🏗️ Projects</strong>: Progressive building of LLM systems</li>
-<li><strong>🧪 Experiments</strong>: Research and exploration tasks</li>
+<li><strong>Lab Exercises</strong>: Hands-on coding and implementation</li>
+<li><strong>Case Studies</strong>: Analysis of real-world LLM applications  </li>
+<li><strong>Projects</strong>: Progressive building of LLM systems</li>
+<li><strong>Experiments</strong>: Research and exploration tasks</li>
 </ul>
 <h2 id="week-by-week-assignments">Week-by-Week Assignments</h2>
 <h3 id="foundation-phase">Foundation Phase</h3>
